align Org Initials in icon fix #9521 (#9583)
align Org initials in icon fix #9521

--- a/web/src/org/_OrgAvatar.scss
+++ b/web/src/org/_OrgAvatar.scss
@@ -6,4 +6,7 @@
     width: 1.5rem;
     font-size: 10px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
